--- a/infra-docker/infra-docker.yml
+++ b/infra-docker/infra-docker.yml
@@ -29,6 +29,19 @@ services:
       - REDIS_HOSTS=redis_store:redis:6379
     ports:
       - "38081:8081"
+  
+  mongodb: 
+    image: mongo:latest 
+    ports: 
+      - "27017:27017" 
+    volumes: 
+      - ./Mongodb/data:/data/db 
+    environment: 
+      MONGO_HOST: localhost
+      MONGO_PORT: 27017
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: 1234
+      MONGO_INITDB_DATABASE: dbname
 
 networks:
   default:
