--- a/go-web-boilerplate/Makefile
+++ b/go-web-boilerplate/Makefile
@@ -2,7 +2,7 @@ PACKAGE = pikachu
 CUSTOM_OS = ${GOOS}
 BASE_PATH = $(shell pwd)
 BINARY_NAME = bin/$(PACKAGE)
-MAIN = $(BASE_PATH)/init/main.go
+MAIN = $(BASE_PATH)/main.go
 
 ifneq (, $(CUSTOM_OS))
 	OS ?= $(CUSTOM_OS)
