--- a/go-web-boilerplate/.vscode/launch.json
+++ b/go-web-boilerplate/.vscode/launch.json
@@ -9,7 +9,7 @@
 		"type": "go",
 		"request": "launch",
 		"mode": "auto",
-		"program": "${workspaceRoot}/init",
+		"program": "${workspaceRoot}",
 		"env": { "ENV": "local" },
 		"args": [],
 		"showLog": true
